<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ротор.Транспорт</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZHJ1MTI4IiwiYSI6ImNrejc5ZWQwczBoa2syeHFtOTk4M3pjNDMifQ.g9Lp7kfn1UCvotPwhER5wA</string>

    <string name="routes">маршруты</string>


    <!-- Toolbar -->
    <string name="gps_tracker">GPS трекер</string>
    <string name="create_route">Создание маршрута</string>
    <string name="signin_fragment_toolbar">Вход</string>
    <string name="route_fragment_toolbar">Маршруты</string>
    <string name="not_found_user_fragment_toolbar">Ошибка входа</string>


    <!-- Snackbar & Toast -->
    <string name="auth_success">Вы успешно вошли в систему</string>
    <string name="turn_on_gps">Включите GPS</string>
    <string name="turn_on_internet">Включите интернет</string>
    <string name="permission_not_granted">Разрешения не выданы</string>
    <string name="tracker_launched">Трекер включен</string>
    <string name="tracker_shutdown">Трекер выключен</string>
    <string name="bus_not_connected">Данные не получены</string>
    <string name="choose_route">Выберите маршрут</string>
    <string name="id_is_coped">ID скопирован в буфер обмена</string>
    <string name="error_delete_user">Ошибка! Не удалось удалить пользователя</string>
    <string name="error_delete_route">Ошибка! Не удалось удалить маршрут</string>
    <string name="error_create_user">Ошибка! Не удалось создать пользователя</string>
    <string name="error_create_route">Ошибка! Не удалось создать маршрут</string>
    <string name="error_edit_route">Ошибка! Не удалось изменить маршрут</string>
    <string name="error_get_users">Ошибка! Не удалось получить список пользователей</string>
    <string name="error_get_routes">Ошибка! Не удалось получить маршруты</string>
    <string name="error_route_line_null">Ошибка! Нет данных линии маршрута</string>
    <string name="fill_all_fields">Заполните все поля!</string>
    <string name="pinch_to_add_to_favorites">Зажмите, чтобы добавить в избранное</string>


    <!-- View -->
    <string name="signing_code">Код аутентификации</string>
    <string name="name_of_route">Название маршрута</string>
    <string name="on_tracker">Включить трекер</string>
    <string name="off_tracker">Выключить трекер</string>
    <string name="find_bus">найти автобус</string>
    <string name="route_not_selected">Маршрут не выбран</string>
    <string name="tracking_route">Отслеживание по маршруту:</string>
    <string name="tracking_off">Отслеживание выключено</string>
    <string name="user_not_found">Аккаунт не найден</string>
    <string name="logout">Выход</string>
    <string name="delete_route">Удалить маршрут?</string>
    <string name="delete_user">Удалить пользователя?</string>
    <string name="confirm">Подтвердить</string>
    <string name="cancel">Отмена</string>
    <string name="user_not_found_reasons">
        Возможные причины:
        \n • Аккаунт был удалён или заблокирован
        \n • Нет соединения с интернетом
        \n • Возникли проблемы на сервере</string>
    <string name="login_out">Очистить данные</string>
    <string name="delete">Удалить</string>
    <string name="id">Идентификатор</string>
    <string name="add">Добавить</string>
    <string name="done">Готово</string>
    <string name="close">Закрыть</string>
    <string name="auto_generation">Автогенерация ID</string>
    <string name="bus_stops">Остановки</string>
    <string name="dispatcher">Диспетчер</string>
    <string name="admin">Админ</string>
    <string name="worker">Работник</string>
    <string name="driver">Водитель</string>
    <string name="error">Ошибка</string>
    <string name="online">онлайн</string>
    <string name="name">Название</string>
    <string name="enter_name_of_bus_stop">Введите название остановки</string>
    <string name="arrival_time">Время прибытия</string>
    <string name="enter_bus_arrival_time">Введите время прибытия автобуса</string>
    <string name="save">Сохранить</string>
    <string name="bus_stop_data">Данные остановки</string>
    <string name="user_data">Данные пользователя</string>
    <string name="all">все</string>
    <string name="_all">Все</string>
    <string name="favourite">избранное</string>
    <string name="sign_in">Войти</string>
    <string name="invalid_password">Неверный пароль</string>
    <string name="reboot">Перезагрузить</string>
    <string name="time">Время</string>
    <string name="bus_stop">Остановка</string>


    <!--  intent  -->
    <string name="action">action</string>
    <string name="off_service">off_service</string>
    <string name="on_service">on_service</string>
    <string name="new_tracker">new_tracker</string>
    <string name="tracker_id">tracker_id</string>
    <string name="busStop_id">busStop_id</string>
    <string name="which_tracker_id">which_tracker_id</string>
    <string name="route">route</string>
    <string name="itemSelected">itemSelected</string>
    <string name="tag_id">tag_id</string>
    <string name="tag_name">tag_name</string>
    <string name="tag_time">tag_time</string>

    <!--  Notification  -->
    <string name="click_to_open_app">Нажмите чтобы открыть приложение</string>

    <!--  keys  -->
    <string name="bus_stop_name_key">bus_stop_name_key</string>
    <string name="bus_stop_time_key">bus_stop_time_key</string>
    <string name="bus_stop_id_key">bus_stop_id_key</string>
</resources>