<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.NotFoundUserFragment">

    <TextView
        android:id="@+id/notFound_NotFoundUserFragment"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:gravity="center"
        android:text="@string/user_not_found"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notFoundReasons_NotFoundUserFragment"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/dark_gray"
        android:text="@string/user_not_found_reasons"
        android:lineSpacingExtra="4sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notFound_NotFoundUserFragment"/>

    <Button
        android:id="@+id/loginOut_NotFoundUserFragment"
        android:layout_width="0sp"
        android:layout_height="70sp"
        android:layout_margin="8sp"
        android:text="@string/login_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>