<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dru128.timetable.auth.SignInFragment">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="230dp"
        android:layout_height="155dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/rotor_text_logo"
        app:layout_constraintBottom_toTopOf="@+id/codeTextContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/codeTextContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:hint="@string/signing_code"
        android:textColorHint="@color/colorPrimary"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintTextColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/codeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusedByDefault="true"
            android:maxLength="50"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminate="true"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/codeTextContainer"
        app:layout_constraintStart_toStartOf="@+id/codeTextContainer"
        app:layout_constraintTop_toBottomOf="@+id/codeTextContainer" />

    <TextView
        android:id="@+id/invalid_password_text"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/invalid_password"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/codeTextContainer"
        app:layout_constraintStart_toStartOf="@+id/codeTextContainer"
        app:layout_constraintTop_toBottomOf="@+id/codeTextContainer" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_button"
        android:layout_width="200sp"
        android:layout_height="64sp"
        android:layout_marginBottom="32dp"
        android:letterSpacing="0.08"
        android:text="@string/sign_in"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="2sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>