<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dru128.timetable.admin.map.create_route.CreateRouteFragment"
    android:id="@+id/parent">

    <com.mapbox.maps.MapView
        android:id="@+id/map"
        android:layout_width="0sp"
        android:layout_height="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/route_panel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        mapbox:mapbox_cameraTargetLat="53.359654"
        mapbox:mapbox_cameraTargetLng="83.719865"
        mapbox:mapbox_cameraZoom="10.0" />

<!--    <ImageView-->
<!--        android:id="@+id/aim"-->
<!--        android:layout_width="48sp"-->
<!--        android:layout_height="48sp"-->
<!--        android:layout_marginBottom="32sp"-->
<!--        android:src="@drawable/location_marker"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/map"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/map"-->
<!--        app:layout_constraintStart_toStartOf="@id/map"-->
<!--        app:layout_constraintTop_toTopOf="@+id/map" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/route_panel"
        android:layout_width="380sp"
        android:layout_height="0sp"
        android:layout_margin="4sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layout_panel"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_marginBottom="2dp"
            android:orientation="vertical"
            android:paddingTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/route_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginEnd="16sp"
                android:background="@drawable/text_without_line"
                android:ems="40"
                android:hint="@string/name_of_route"
                android:textSize="21sp" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="0.6sp"
                android:background="@color/good_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/route_name" />

            <TextView
                android:id="@+id/title_bus_stops"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:text="@string/bus_stops"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/routes_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                tools:listitem="@layout/route_item" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_route_button"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/save"
            app:icon="@drawable/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/create_route_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_bus_stop"
                android:layout_weight="1"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="остановку"
                app:icon="@drawable/plus"
                app:iconSize="40sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_route_line"
                android:layout_weight="1"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="точку"
                app:icon="@drawable/plus"
                app:iconSize="40sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>